syntax = "proto3";

package echo;

service Echo {
    // First test endpoint
	rpc Repeat(RepeatRequest) returns (RepeatResponse) {}
	// Second test endpoint 
	rpc Scream(ScreamRequest) returns (ScreamResponse) {}
	// Check integration with http endpoint
	rpc AskGoogle(AskGoogleRequest) returns (AskGoogleResponse) {}
	// Check integartion with Mysql database
	rpc AskDB(AskDBRequest) returns (AskDBResponse) {}
	// Check integartion with Redis cache
	rpc AskRedis(AskRedisRequest) returns (AskRedisResponse) {}
	// Check integartion with second grpc service
	rpc AskOracle(AskOracleRequest) returns (AskOracleResponse) {}
}


message RepeatRequest {
	string data = 1;
}

message RepeatResponse {
	string data = 1;
}

message ScreamRequest {
	string data = 1;
}

message ScreamResponse {
	string data = 1;
}

message AskGoogleRequest {
	string data = 1;
}

message AskGoogleResponse {
	string data = 1;
}


message AskDBRequest {
	string data = 1;
}

message AskDBResponse {
	string data = 1;
}

message AskRedisRequest {
	string data = 1;
}

message AskRedisResponse {
	string data = 1;
}

message AskOracleRequest {
	string data = 1;
}

message AskOracleResponse {
	string data = 1;
}
